ecmascript/parser/tests/test262-error-references/fail/d10b36aa74a59bcf.js.stderr
error: Unexpected token
 --> $DIR/tests/test262-parser/fail/d10b36aa74a59bcf.js:1:1
  |
1 | }
  | ^

